--- a/todo.html
+++ b/todo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My To-Do List</title>
-    <link rel="stylesheet" href="/to-do-list/style.css">
+    <link rel="stylesheet" href="/to-do-list/my-to-do-list/style.css">
 </head>
 <body>
     <div class="container">
@@ -23,7 +23,7 @@
             </ul>
         </div>
     </div>
-    <script src="/to-do-list/app.js">
+    <script src="/to-do-list/my-to-do-list/app.js">
     </script>
     
 </body>
